feat: enable favIcon page